# pasteboard2

./: .gitignore  README.md  mkdist.py  pasteboard2.py  pyproject.toml  requirements.txt  test_pasteboard2.py
.github/workflows/: black.yml
pasteboard2/: __init__.py  __main__.py  pasteboard2.py
src/pasteboard2/: __init__.py  pasteboard2.py
tests/: test_pasteboard2.py
