[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
[project]
name = "pasteboard2"
version = "0.0.6"
authors = [
  { name="Bernhard Wagner", email="pasteboard2@nosuch.biz" },
]
description = "access macOS pasteboard"
readme = "README.md"
license = { file = "LICENSE.txt"}
requires-python = ">=3.7"
dependencies = [
	"pyobjc",
	"pytest",
	"typer",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS :: MacOS X",
]

[project.urls]
"Homepage" = "https://github.com/bwagner/pasteboard2"
"Bug Tracker" = "https://github.com/bwagner/pasteboard2/issues"
[tool.isort]
profile = 'black'
[project.scripts]
pb2 = "pasteboard2.__main__:main"
[tool.pytest.ini_options]
addopts = "--doctest-modules"
doctest_optionflags = "NORMALIZE_WHITESPACE ELLIPSIS"
testpaths = [
    "pasteboard2",
    "tests",
]
